--- a/public/index.html
+++ b/public/index.html
@@ -35,9 +35,9 @@
       // converts it back into the correct url and adds it to the
       // browser's history using window.history.replaceState(...),
       // which won't cause the browser to attempt to load the new url.
-      // When the single page app is loaded further down in this file,
+      // When the single pages app is loaded further down in this file,
       // the correct url will be waiting in the browser's history for
-      // the single page app to route accordingly.
+      // the single pages app to route accordingly.
       (function (l) {
         if (l.search[1] === '/') {
           var decoded = l.search
@@ -62,7 +62,7 @@
     <div id="root"></div>
     <!--
       This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+      If you open it directly in the browser, you will see an empty pages.
 
       You can add webfonts, meta tags, or analytics to this file.
       The build step will place the bundled scripts into the <body> tag.
